# RMCapture

./: CMakeLists.txt  README.md
include/: ImageConsumer.hpp  setting.hpp
param/: param_config.xml
src/: ImageConsumer.cpp  main.cpp
